authorization and session storage
Add the ability to store session tokens in the database
Add functions to manage the session tokens: Authorize and Revoke
Modify Dashboard to utilize the new sessionstorage

renamed:    verify_login_status.go -> authorization.go
modified:   dashboard.go
renamed:    forum.db -> data/forum.db
modified:   db/database.go
create:   db/session.go
create:   db/users.go
modified:   login.go
modified:   logout.go
renamed:    models.go -> models/user.go
modified:   register.go
modified:   templates/dashboard.html

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Dashboard</h1>
     <p>
-        Hello fakers, this dashboard will blow away your mind like you have never again seen it
+        Hello {{.}}, this dashboard will blow away your mind like you have never again seen it
     </p>
 </body>
 </html>
